$Id: ChangeLog,v 1.440 2008/07/07 07:39:09 haraldkipp Exp $

2008-07-07  Harald Kipp  <harald.kipp@egnite.de>

	* os/heap.c: Throws data abort exception on ARM. Function checkBeef()
	removed for 32 bit targets.


2008-07-01  Thiago A. Correa  <thiago.correa@gmail.com>

	* crt/malloc.c: Add realloc to override libc's realloc using 
	NutHeapRealloc.


2008-06-28  Harald Kipp  <harald.kipp@egnite.de>

	* os/heap.c: ImageCraft doesn't support inline. Replaced this keyword
	by macro INLINE.


2008-06-27  Harald Kipp  <harald.kipp@egnite.de>

	* crt/sbrk.c, conf/crt/crt.nut, conf/tools.nut, crt/putf.c:
	Added floating point support for stdio running on ARM. This
	is a dirty implementation and hadn't been tested very well.


2008-06-25  Matthias Ringwald <mringwal@inf.ethz.ch>
        * include/sys/heap.h, os/heap.c: Added NutHeapRealloc contributed
        by Moritz 'Monty' Struebe. 
        * include/arch/unix.h: escape realloc in unix emulation
        * include/arch/icc.h:  escape realloc for icc

2008-06-23  Harald Kipp  <harald.kipp@egnite.de>

	* boot/bootmon/Makedefs, boot/bootmon/bootmon.c, 
	boot/bootmon/npluled.h: Version 1.5.0. User LED support added.

	* boot/bootmon/tftp.c: Reduced retry time to become more responsive 
	to space input via RS-232.


2008-06-16 Matthias Ringwald <mringwal@inf.ethz.ch>
        * os/semaphore.c: fix bug in NutSemTryWait. It would block
        if sem->value == 0 instead of returning -1.


2008-06-16  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/at91_spi.c: Fixes #1963841. Many thanks to Eric 
	Haver (very sharp eyes).

	* conf/arch/avr.nut, arch/Makefile: Temporarily removed wlandrv.c
	from build due to GCC 4.3 warning.

	* include/arch/avr/gcc.h: Added Thiago's patch to fix
	_SLEEP_MODE_MASK problem, which is no longer public in
	the latest avrlibc. 


2008-06-15  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/os/context_gcc.c, arch/avr/os/context_icc.c,
	crt/malloc.c, include/sys/heap.h, include/sys/thread.h,